[package]
name = "metrics_histo"
version = "0.1.0"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]
edition = "2018"

[dependencies]
dashmap = "4.0"
metrics = "0.14"
metrics-tracing-context = "0.3"
metrics-util = "0.6"
once_cell = "1.7"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-core = "0.1"
tokio = { version = "1", features = ["full"] }
twox-hash = "1.6"